--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,6 +37,12 @@
       <li class="nav-item">
         <a class="nav-link" href="http://vahidmfr.e-monsite.com/pages/la-carte.html" title="La Carte">La Carte</a>
       </li>
+ 	  <li class="nav-item">
+        <a class="nav-link" href="http://vahidmfr.e-monsite.com/pages/la-carte.html" title="La Carte">Les Animations et le Réseau Social</a>
+      </li>
+ 	 <li class="nav-item">
+        <a class="nav-link" href="http://vahidmfr.e-monsite.com/pages/la-carte.html" title="La Carte">Les Voitures de Luxe</a>
+      </li>
       
     </ul>
   </div>  
@@ -64,6 +70,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Les Animations et le Réseau Social</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link" href="#">Les Voiture de Luxe</a>
         </li>
       </ul>
       <hr class="d-sm-none">
